--- a/app/views/customers/estates/index.html.erb
+++ b/app/views/customers/estates/index.html.erb
@@ -1,36 +1,46 @@
 <%= render "customers/customers/header" %>
+<div class="container" style="padding-top: 180px;">
 <div class="row">
   <% @estates.each do |estate| %>
-  <div class="col-md-3">
-    <div class="card">
-      <div class="card-img-top">
-        <%= link_to attachment_image_tag(estate, :background_image, format: 'jpeg', size: "333x200"), estate_path(estate) %>
-      </div>
-      <div class="card-title">
-        <%= estate.name %> <%= estate.room_number %>号室
-      </div>
-      <div class="card-body">
-        <p>住所：<%= estate.address %></p>
-        <p>間取り：<%= estate.floor %></p>
-        <p>賃料：¥<%= estate.price.to_s(:delimited) %></p>
-        <% if estate.favorited_by?(current_customer) %>
-          <p>お気に入り：
-            <%= link_to estate_favorites_path(estate), method: :delete do %>
-            ★<%= estate.favorites.count %>
-            <% end %>
-          </p>
-        <% else %>
-          <p>お気に入り：
-            <%= link_to estate_favorites_path(estate), method: :post do %>
-            ☆<%= estate.favorites.count %>
-            <% end %>
-          </p>
-        <% end %>
-        <p>投稿日時：<%= estate.created_at.strftime('%Y年%m月%d日 %H時%M分') %></p>
+    <div class="col-4">
+      <div class="card mb-4" style="height:550px;">
+        <div class="card-img-top">
+          <%= link_to attachment_image_tag(estate, :background_image, format: 'jpeg', size: "348x200"), estate_path(estate) %>
+        </div>
+        <div class="card-title" style="padding: 10px 0 0 10px;">
+          <%= estate.name %>　<%= estate.room_number %>号室
+        </div>
+        <div class="card-body" style="padding: 10px 0 0 10px;">
+          <div class="row justify-content-start">
+            <div class="col-2 address">
+              住所
+            </div>
+            <div class="col-10 address">
+              <%= estate.address %>
+            </div>
+          </div><br>
+
+          <div>間取り　<%= estate.floor %></div><br>
+          <div>賃料　¥<%= estate.price.to_s(:delimited) %></div><br>
+          <% if estate.favorited_by?(current_customer) %>
+            <div>お気に入り
+              <%= link_to estate_favorites_path(estate), method: :delete do %>
+              ★<%= estate.favorites.count %>
+              <% end %>
+            </div>
+          <% else %>
+            <div>お気に入り
+              <%= link_to estate_favorites_path(estate), method: :post do %>
+              ☆<%= estate.favorites.count %>
+              <% end %>
+            </div>
+          <% end %><br>
+          <div>投稿日時：<%= estate.created_at.strftime('%Y年%m月%d日 %H時%M分') %></div><br>
+        </div>
       </div>
     </div>
-  </div>
   <% end %>
+</div>
 </div>
 <%= paginate @estates %>
 <%= render "customers/customers/footer" %>
