--- a/app/assets/stylesheets/customers/estates.scss
+++ b/app/assets/stylesheets/customers/estates.scss
@@ -1,3 +1,11 @@
 // Place all the styles related to the customers::estates controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.col-10.address {
+  padding-left: 0;
+}
+
+.col-2.address {
+  padding-right: 0;
+}
