--- a/app/views/customers/estates/_article.html.erb
+++ b/app/views/customers/estates/_article.html.erb
@@ -1,84 +1,83 @@
 <div class="carousel-item active">
   <div class="row">
-
     <div class="col text-center">
       <div class="card">
         <div class="card-img-top">
-          <%= link_to attachment_image_tag(estates.first, :background_image, format: 'jpeg', size: "333x200"), estate_path(estates.first) %>
+          <%= link_to attachment_image_tag(estates.first, :background_image, format: 'jpeg', size: "348x200"), estate_path(estates.first) %>
         </div>
         <div class="card-body">
-          <h4 class="card-title"><%= estates.first.name %> <%= estates.first.room_number %>号室</h4>
-          <p>住所：<%= estates.first.address %></p>
-          <p>間取り：<%= estates.first.floor %></p>
-          <p>賃料：¥<%= estates.first.price.to_s(:delimited) %></p>
+          <h4 class="card-title"><%= estates.first.name %>　<%= estates.first.room_number %>号室</h4>
+          <p>住所　<%= estates.first.address %></p>
+          <p>間取り　<%= estates.first.floor %></p>
+          <p>賃料　¥<%= estates.first.price.to_s(:delimited) %></p>
           <% if estates.first.favorited_by?(current_customer) %>
-            <p>お気に入り：
+            <p>お気に入り　
               <%= link_to estate_favorites_path(estates.first), method: :delete do %>
               ★<%= estates.first.favorites.count %>
               <% end %>
             </p>
           <% else %>
-            <p>お気に入り：
+            <p>お気に入り　
               <%= link_to estate_favorites_path(estates.first), method: :post do %>
               ☆<%= estates.first.favorites.count %>
               <% end %>
             </p>
           <% end %>
-          <p>投稿日時：<%= estates.first.created_at.strftime('%Y年%m月%d日 %H時%M分') %></p>
+          <p>投稿日時　<%= estates.first.created_at.strftime('%Y年%m月%d日 %H時%M分') %></p>
         </div>
       </div>
     </div>
     <div class="col text-center">
       <div class="card">
         <div class="card-img-top">
-          <%= link_to attachment_image_tag(estates.second, :background_image, format: 'jpeg', size: "333x200"), estate_path(estates.second) %>
+          <%= link_to attachment_image_tag(estates.second, :background_image, format: 'jpeg', size: "348x200"), estate_path(estates.second) %>
         </div>
         <div class="card-body">
-          <h4 class="card-title"><%= estates.second.name %> <%= estates.second.room_number %>号室</h4>
-          <p>住所：<%= estates.second.address %></p>
-          <p>間取り：<%= estates.second.floor %></p>
-          <p>賃料：¥<%= estates.second.price.to_s(:delimited) %></p>
+          <h4 class="card-title"><%= estates.second.name %>　<%= estates.second.room_number %>号室</h4>
+          <p>住所　<%= estates.second.address %></p>
+          <p>間取り　<%= estates.second.floor %></p>
+          <p>賃料　¥<%= estates.second.price.to_s(:delimited) %></p>
           <% if estates.second.favorited_by?(current_customer) %>
-            <p>お気に入り：
+            <p>お気に入り　
               <%= link_to estate_favorites_path(estates.second), method: :delete do %>
               ★<%= estates.second.favorites.count %>
               <% end %>
             </p>
           <% else %>
-            <p>お気に入り：
+            <p>お気に入り　
               <%= link_to estate_favorites_path(estates.second), method: :post do %>
               ☆<%= estates.second.favorites.count %>
               <% end %>
             </p>
           <% end %>
-          <p>投稿日時：<%= estates.second.created_at.strftime('%Y年%m月%d日 %H時%M分') %></p>
+          <p>投稿日時　<%= estates.second.created_at.strftime('%Y年%m月%d日 %H時%M分') %></p>
         </div>
       </div>
     </div>
     <div class="col text-center">
       <div class="card">
         <div class="card-img-top">
-          <%= link_to attachment_image_tag(estates.third, :background_image, format: 'jpeg', size: "333x200"), estate_path(estates.third) %>
+          <%= link_to attachment_image_tag(estates.third, :background_image, format: 'jpeg', size: "348x200"), estate_path(estates.third) %>
         </div>
         <div class="card-body">
-          <h4 class="card-title"><%= estates.third.name %> <%= estates.third.room_number %>号室</h4>
-          <p>住所：<%= estates.third.address %></p>
-          <p>間取り：<%= estates.third.floor %></p>
-          <p>賃料：¥<%= estates.third.price.to_s(:delimited) %></p>
+          <h4 class="card-title"><%= estates.third.name %>　<%= estates.third.room_number %>号室</h4>
+          <p>住所　<%= estates.third.address %></p>
+          <p>間取り　<%= estates.third.floor %></p>
+          <p>賃料　¥<%= estates.third.price.to_s(:delimited) %></p>
           <% if estates.third.favorited_by?(current_customer) %>
-            <p>お気に入り：
+            <p>お気に入り　
               <%= link_to estate_favorites_path(estates.third), method: :delete do %>
               ★<%= estates.third.favorites.count %>
               <% end %>
             </p>
           <% else %>
-            <p>お気に入り：
+            <p>お気に入り　
               <%= link_to estate_favorites_path(estates.third), method: :post do %>
               ☆<%= estates.third.favorites.count %>
               <% end %>
             </p>
           <% end %>
-          <p>投稿日時：<%= estates.third.created_at.strftime('%Y年%m月%d日 %H時%M分') %></p>
+          <p>投稿日時　<%= estates.third.created_at.strftime('%Y年%m月%d日 %H時%M分') %></p>
         </div>
       </div>
     </div>
@@ -90,81 +89,81 @@
     <div class="col">
       <div class="card">
         <div class="card-img-top">
-          <%= link_to attachment_image_tag(estates.fourth, :background_image, format: 'jpeg', size: "333x200"), estate_path(estates.fourth) %>
+          <%= link_to attachment_image_tag(estates.fourth, :background_image, format: 'jpeg', size: "348x200"), estate_path(estates.fourth) %>
         </div>
         <div class="card-body">
-          <h4 class="card-title"><%= estates.fourth.name %> <%= estates.fourth.room_number %>号室</h4>
-          <p>住所：<%= estates.fourth.address %></p>
-          <p>間取り：<%= estates.fourth.floor %></p>
-          <p>賃料：¥<%= estates.fourth.price.to_s(:delimited) %></p>
+          <h4 class="card-title"><%= estates.fourth.name %>　<%= estates.fourth.room_number %>号室</h4>
+          <p>住所　<%= estates.fourth.address %></p>
+          <p>間取り　<%= estates.fourth.floor %></p>
+          <p>賃料　¥<%= estates.fourth.price.to_s(:delimited) %></p>
           <% if estates.fourth.favorited_by?(current_customer) %>
-            <p>お気に入り：
+            <p>お気に入り　
               <%= link_to estate_favorites_path(estates.fourth), method: :delete do %>
               ★<%= estates.fourth.favorites.count %>
               <% end %>
             </p>
           <% else %>
-            <p>お気に入り：
+            <p>お気に入り　
               <%= link_to estate_favorites_path(estates.fourth), method: :post do %>
               ☆<%= estates.fourth.favorites.count %>
               <% end %>
             </p>
           <% end %>
-          <p>投稿日時：<%= estates.fourth.created_at.strftime('%Y年%m月%d日 %H時%M分') %></p>
+          <p>投稿日時　<%= estates.fourth.created_at.strftime('%Y年%m月%d日 %H時%M分') %></p>
         </div>
       </div>
     </div>
     <div class="col">
       <div class="card">
         <div class="card-img-top">
-          <%= link_to attachment_image_tag(estates.fifth, :background_image, format: 'jpeg', size: "333x200"), estate_path(estates.fifth) %>
+          <%= link_to attachment_image_tag(estates.fifth, :background_image, format: 'jpeg', size: "348x200"), estate_path(estates.fifth) %>
         </div>
         <div class="card-body">
-          <h4 class="card-title"><%= estates.fifth.name %> <%= estates.fifth.room_number %>号室</h4>
-          <p>住所：<%= estates.fifth.address %></p>
-          <p>間取り：<%= estates.fifth.floor %></p>
-          <p>賃料：¥<%= estates.fifth.price.to_s(:delimited) %></p>
+          <h4 class="card-title"><%= estates.fifth.name %>　<%= estates.fifth.room_number %>号室</h4>
+          <p>住所　<%= estates.fifth.address %></p>
+          <p>間取り　<%= estates.fifth.floor %></p>
+          <p>賃料　¥<%= estates.fifth.price.to_s(:delimited) %></p>
           <% if estates.fifth.favorited_by?(current_customer) %>
-            <p>お気に入り：
+            <p>お気に入り　
               <%= link_to estate_favorites_path(estates.fifth), method: :delete do %>
               ★<%= estates.fifth.favorites.count %>
               <% end %>
             </p>
           <% else %>
-            <p>お気に入り：
+            <p>お気に入り　
               <%= link_to estate_favorites_path(estates.fifth), method: :post do %>
               ☆<%= estates.fifth.favorites.count %>
               <% end %>
             </p>
           <% end %>
-          <p>投稿日時：<%= estates.fifth.created_at.strftime('%Y年%m月%d日 %H時%M分') %></p>
+          <p>投稿日時　<%= estates.fifth.created_at.strftime('%Y年%m月%d日 %H時%M分') %></p>
         </div>
       </div>
     </div>
     <div class="col">
       <div class="card">
         <div class="card-img-top">
-          <%= link_to attachment_image_tag(estates.last, :background_image, format: 'jpeg', size: "333x200"), estate_path(estates.last) %>
+          <%= link_to attachment_image_tag(estates.last, :background_image, format: 'jpeg', size: "348x200"), estate_path(estates.last) %>
         </div>
         <div class="card-body">
-          <h4 class="card-title"><%= estates.last.name %> <%= estates.last.room_number %>号室</h4>
-          <p>住所：<%= estates.last.address %></p>
-          <p>間取り：<%= estates.last.floor %></p>
-          <p>賃料：¥<%= estates.last.price.to_s(:delimited) %></p>
+          <h4 class="card-title"><%= estates.last.name %>　<%= estates.last.room_number %>号室</h4>
+          <p>住所　<%= estates.last.address %></p>
+          <p>間取り　<%= estates.last.floor %></p>
+          <p>賃料　¥<%= estates.last.price.to_s(:delimited) %></p>
           <% if estates.last.favorited_by?(current_customer) %>
-            <p>お気に入り：
+            <p>お気に入り　
               <%= link_to estate_favorites_path(estates.last), method: :delete do %>
               ★<%= estates.last.favorites.count %>
               <% end %>
             </p>
           <% else %>
-            <p>お気に入り：
+            <p>お気に入り　
               <%= link_to estate_favorites_path(estates.last), method: :post do %>
               ☆<%= estates.last.favorites.count %>
               <% end %>
             </p>
           <% end %>
-          <p>投稿日時：<%= estates.last.created_at.strftime('%Y年%m月%d日 %H時%M分') %></p>
+          <p>投稿日時　<%= estates.last.created_at.strftime('%Y年%m月%d日 %H時%M分') %></p>
         </div>
       </div>
     </div>
