--- a/app/views/customers/estates/show.html.erb
+++ b/app/views/customers/estates/show.html.erb
@@ -1,36 +1,52 @@
 <%= render "customers/customers/header" %>
 <%= attachment_image_tag @estate, :background_image, format: 'jpeg', size: "1500x800" %>
-<div class="row">
-  <div class="col-md-11">
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <div class="text-center" style="padding: 40px 0 30px 0; font-size: 30px; font-weight: bold;">
+        <%= @estate.name %>　<%= @estate.room_number %>号室
+      </div>
+    </div>
+  </div>
+
+
+
+
+
+
+
+
+  <div class="col">
     <div class="card">
       <div class="card-body">
-        <h2><%= @estate.name %> <%= @estate.room_number %>号室</h2>
         <%= @estate.info %>
-        <p>物件住所：<%= @estate.address %></p>
-        <p>間取り：<%= @estate.floor %></p>
-        <p>賃料：¥<%= @estate.price.to_s(:delimited) %></p>
+        <p>物件住所　<%= @estate.address %></p>
+        <p>間取り　<%= @estate.floor %></p>
+        <p>賃料　¥<%= @estate.price.to_s(:delimited) %></p>
         <%= attachment_image_tag @estate, :floor_image, format: 'jpeg', size: "100x100" %>
         <% if @estate.favorited_by?(current_customer) %>
-          <p>お気に入り：
+          <p>お気に入り
             <%= link_to estate_favorites_path(@estate), method: :delete do %>
             ★<%= @estate.favorites.count %>
             <% end %>
           </p>
         <% else %>
-          <p>お気に入り：
+          <p>お気に入り
             <%= link_to estate_favorites_path(@estate), method: :post do %>
             ☆<%= @estate.favorites.count %>
             <% end %>
           </p>
         <% end %>
-        <p>投稿日時：<%= @estate.created_at.strftime('%Y年%m月%d日 %H時%M分') %></p>
+        <p>投稿日時　<%= @estate.created_at.strftime('%Y年%m月%d日 %H時%M分') %></p>
       </div>
     </div>
   </div>
 </div>
+</div>
 
-<%= link_to "お問い合わせする", new_estate_research_path(@estate) %>
-
+<div class="text-center">
+  <%= link_to "お問い合わせする", new_estate_research_path(@estate), class: "edit btn-sm btn-outline-secondary", :style=>"text-decoration: none;" %>
+</div>
 
 <button type="button" class="btn btn-white" data-toggle="modal" data-target="#myModal-1">
   <%= attachment_image_tag @estate, :property_image_a, format: 'jpeg', size: "400x400" %>
