--- a/app/views/customers/estates/top.html.erb
+++ b/app/views/customers/estates/top.html.erb
@@ -1,5 +1,5 @@
-<header class="header" style="position: sticky; position: -webkit-sticky; top: 0;">
-  <nav class="navbar justify-content-end navbar-expand-xs navbar-light">
+<header class="sticky-top" style="width:100%;">
+  <nav class="navbar navbar-expand-xs navbar-light justify-content-end">
     <button class="navbar-toggler pl-5" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -35,9 +35,10 @@
       </ul>
     </div>
   </nav>
+
 </header>
 
-<div class="row top justify-content-center">
+<div class="row top justify-content-center" style="padding-top: 130px;">
   <%= link_to image_tag("logo1.jpg"), root_path, class: "image-top" %>
 </div>
 
@@ -85,7 +86,7 @@
   </div>
 <% end %>
 
-<div class="new" style="margin-top: 100px; padding-bottom: 200px; background-color: #EB9FEF;">
+<div class="new" style="margin-top: 100px; padding-bottom: 100px; background-color: #EB9FEF;">
   <div class="row justify-content-center p-5" style="color: white; font-weight: bold;">
     <div class="text" style="font-size: 60px;">
       <div class>N e w</div>
