--- a/app/views/customers/registrations/edit.html.erb
+++ b/app/views/customers/registrations/edit.html.erb
@@ -1,5 +1,5 @@
 <%= render "customers/customers/header" %>
-<div class="text-center pt-5 pb-5" style="font-size: 30px; font-weight: bold;">マイページ編集</div>
+<div class="text-center" style="padding: 150px 0 30px 0; font-size: 30px; font-weight: bold;">マイページ編集</div>
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= render "customers/shared/error_messages", resource: resource %>
 
