--- a/app/views/customers/researches/new.html.erb
+++ b/app/views/customers/researches/new.html.erb
@@ -1,6 +1,6 @@
 <%= render "customers/customers/header" %>
 
-<div class="text-center pt-5 pb-5" style="font-size: 30px; font-weight: bold;">お問い合わせ</div>
+<div class="text-center" style="padding: 150px 0 30px 0; font-size: 30px; font-weight: bold;">お問い合わせ</div>
 <%= form_with model: @research, url: estate_researches_path, local: true do |f| %>
   <div class="container">
     <div class="card shadow" style="margin: 0 0 150px 0;">
@@ -12,20 +12,20 @@
         <div class="col-2 text-center"><%= f.label :本文 %></div>
         <div class="col-1"><%= f.text_area :body, placeholder:"コメントをご入力ください。", :size=>"100x10" %></div>
       </div>
-      <div class="row justify-content-center pb-5"><%= f.submit "お問い合せ", class: "search" %></div>
+      <div class="row justify-content-center pb-5"><%= f.submit "お問い合わせ", class: "search" %></div>
       <div class="row">
         <div class="col-9 text-right" style="padding-top: 60px;">
-          <p>お問合せするにはログインが必要です。<br/>会員登録済みの方はログインへ→</p>
+          <p>お問い合わせするにはログインが必要です。<br/>会員登録済みの方はログインへ→</p>
         </div>
         <div class="col" style="padding-top: 68px;">
           <%= link_to "ログイン", new_customer_session_path, class: "edit btn-sm btn-outline-secondary", :style=>"font-size: 20px; text-decoration: none;" %>
         </div>
       </div>
-      <div class="row" style="padding: 30px 0 20px 0;">
-        <div class="col-9 pb-5 text-right">
-          <p>お問合せするには会員登録が必要です。<br/>会員登録をする方は会員登録へ→</p>
+      <div class="row">
+        <div class="col-9 text-right" style="padding: 20px;">
+          <p>お問い合せするには会員登録が必要です。<br/>会員登録をする方は会員登録へ→</p>
         </div>
-        <div class="col">
+        <div class="col" style="padding-top: 28px;">
           <%= link_to "会員登録", new_customer_registration_path, class: "edit btn-sm btn-outline-secondary", :style=>"font-size: 20px; text-decoration: none;" %>
         </div>
       </div>
